--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,13 @@
-# Настройки подключения к Keenetic роутеру
-ROUTER_HOST=192.168.1.1
-ROUTER_PORT=22
-ROUTER_USERNAME=admin
-ROUTER_PASSWORD=your_password
+# Keenetic Router SSH Configuration
 
-# Устройство и политика (опционально, можно указать через CLI)
-# DEVICE_MAC=AA:BB:CC:DD:EE:FF
-# TARGET_POLICY=Policy1
+# IP адрес или hostname роутера
+ROUTER_HOST=192.168.1.1
+
+# SSH порт (по умолчанию 22)
+ROUTER_PORT=22
+
+# Имя пользователя администратора
+ROUTER_USERNAME=admin
+
+# Пароль администратора
+ROUTER_PASSWORD=your_password_here
