--- a/package.json
+++ b/package.json
@@ -1,35 +1,34 @@
 {
   "name": "keenetic-policy-changer",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Инструмент для управления политиками доступа на Keenetic роутере через SSH",
-  "main": "src/index.ts",
   "scripts": {
-    "start": "tsx src/index.ts",
-    "list-devices": "tsx src/index.ts list-devices",
-    "list-policies": "tsx src/index.ts list-policies",
-    "change-policy": "tsx src/index.ts change-policy",
-    "reset-policy": "tsx src/index.ts reset-policy",
-    "full-information": "tsx src/index.ts interactive",
-    "typecheck": "yarn tsc --noEmit"
+    "start": "yarn tsx src/index.ts",
+    "helper": "yarn start --help",
+    "list-devices": "yarn start list-devices",
+    "list-policies": "yarn start list-policies",
+    "change-policy": "yarn start change-policy",
+    "reset-policy": "yarn start reset-policy"
   },
-  "keywords": [
-    "keenetic",
-    "router",
-    "policy",
-    "ssh",
-    "network",
-    "typescript"
-  ],
+  "author": "Echzio",
+  "license": "MIT",
   "type": "module",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "dependencies": {
     "commander": "14.0.2",
     "dotenv": "17.2.3",
-    "ssh2": "1.17.0"
+    "ssh2": "1.17.0",
+    "tsx": "4.21.0"
   },
   "devDependencies": {
     "@types/node": "25.0.8",
     "@types/ssh2": "1.15.5",
-    "tsx": "4.21.0",
     "typescript": "5.9.3"
   },
   "packageManager": "yarn@4.12.0"
